# AI-Employee-OS

./: README.md  SYSTEM_ARCHITECTURE.md  pyproject.toml  requirements.txt
AGENTS/: Coding_agent.py  DEFAULT_agent.py  DTA.py  Email_agent.py  Research_agent.py  TALKATIVE_agent.py  User_Query.txt
BACKEND_SERVER/: backend.py  orchestrator.py
FRONTEND_SERVER/: frontend.py
